Working on a clean version for easy compilation.

--- a/foreword.tex
+++ b/foreword.tex
@@ -1,7 +1,5 @@
 \chapter{Foreword}
 
-\chapterprecishere{\raggedleft\textup{by} \textsc{Ana Carolina Lorena}~\orcidlink{0000-0002-6140-571X}}
-
 Data is now a ubiquitous presence and is collected every time and everywhere. However, the
 real challenge lies in harnessing this data to generate actionable insights that guide
 decision-making and drive innovation. This is the essence of data science, a
@@ -26,14 +24,13 @@ readers to critically evaluate their models' strengths and limitations. It under
 importance of semantics in data handling, equipping readers with the skills to interpret
 and transform data meaningfully.
 
-\begin{sloppypar}
-\emergencystretch=1em
 Whether you are a student embarking on your first data science project or a data scientist
 professional seeking to expand and refine your skills, this book's clarity, rigour, and
 practical focus make it a guide that will serve you well in tackling the complex
 challenges of data-driven decision-making. The book will expand your understanding and
 inspire you to approach data science projects with a commitment to creating responsible
 and impactful solutions.
-\end{sloppypar}
+
+Ana Carolina Lorena
 
 % vim: spell spelllang=en
