--- a/evaluation.tex
+++ b/evaluation.tex
@@ -348,11 +348,9 @@ this scale, the axes are transformed to show the error rates in a more linear wa
         ticks={%
         %   major={at={0.001, 0.005, 0.02, 0.05, 0.1, 0.2, 0.5, 0.8, 0.9, 0.95, 0.98, 0.995, 0.999}},
           tick typesetter/.code={%
-            \gnuplotNorm{##1}
-            \pgfmathprintnumber{##1}$\sigma$% (\pgfmathprintnumber{\gnuplotResult})%
+            \pgfmathprintnumber{##1}$\sigma$
           },%
         },%
-        % function=\pgfdvmathinvnorm{\pgfvalue}{\pgfvalue}%
       }%
     ] data {
       x,y
@@ -372,9 +370,6 @@ this scale, the axes are transformed to show the error rates in a more linear wa
     };
   \end{tikzpicture}
 \end{figurebox}
-
-% \gnuplotInvnorm{0.001}
-% Result is \gnuplotResult
 
 \subsection{Other variations}
 
