--- a/courses.tex
+++ b/courses.tex
@@ -2,8 +2,8 @@
 
 In the following, I present the course plan for PO-235 and CMC-16.
 
-Any questions about the classes should be sent via Google Classroom.  If your question is
-of general interest, please use the main stream.  If your question is personal and about
+Any questions about the classes should be sent via Google Classroom.  If your query is of
+general interest, please use the main channel.  If your query is personal and related to
 a specific assignment or grade, please use the private stream.
 
 \newpage
@@ -14,13 +14,13 @@ a specific assignment or grade, please use the private stream.
 
 Prof. Filipe A. N. Verri
 
-\paragraph{Important:} Only graduate students are allowed to take this course.
+\paragraph{Important:} Only graduate students are permitted to enroll in this course.
 
 \paragraph{Number of students:} Approx. 20
 
 \paragraph{Course load:} 3--0--0--4
 
-\paragraph{Requirements:} Advanced programming skills, strong statistics background, and
+\paragraph{Requirements:} Advanced programming skills, strong statistical background, and
 beginner-level machine-learning skills.
 
 \paragraph{Course program:}
@@ -32,20 +32,20 @@ data science. Model evaluation and Bayesian analysis.  Documentation and deploym
 Ethical and legal issues in data science.  Privacy-preserving computational approaches.
 
 \paragraph{Goals:}
-Providing the theoretical background and the practical concepts to develop an end-to-end
+Providing the theoretical foundation and practical concepts to develop an end-to-end
 data science project for an inductive task.
 
 \paragraph{Teaching methodology:}
 Expository classes in common classroom, using whiteboard, slide presentations, coding
-examples, books and scientific papers. Supplementary didactic materials will be available
-in Google Classroom. The development of the case study will happen during home study
+examples, books, and scientific papers.  Supplementary didactic materials will be available
+in Google Classroom. The development of the case study will occur during home study
 hours, including programming and scientific paper writing.  All classes will be given in
 English.  Students are encouraged to ask questions in English, but Portuguese is also
-allowed. All written and oral assignments must be in English.
+permitted. All written and oral assignments must be in English.
 
 \paragraph{Grading:} Two individual written tests in the \nth{1} quarter ($T_1$ and $T_2$) and
-another in the \nth{2} quarter ($T_3$).  Also, a group activity that includes writting a
-scientific paper (optional), developing a data science product, and a 30 minutes presentation ($L$).
+another in the \nth{2} quarter ($T_3$).  Also, a group activity that includes writing a
+scientific paper (optional), developing a data science product, and a 30-minute presentation ($L$).
 
 Final grades will be calculated as
 \begin{equation*}
@@ -57,9 +57,9 @@ Final grades will be calculated as
 \paragraph{Case study:} At most 6 groups will be formed.  Each group will be responsible for
 a case study.  Students must choose a real-world problem and develop a data science
 project, including data collection, data handling, inductive learning, validation,
-documentation, and deployment.  The results must be presented in a 30 minutes presentation.
-Extra points will be given to groups that write a scientific paper about the case study.
-The trained models must be incorporated in a data science product, such as a web
+documentation, and deployment. The results must be presented in a 30-minute presentation.
+Extra points will be awarded to groups that write a scientific paper about the case study.
+The trained models must be incorporated into a data science product, such as a web
 application, a mobile application, or a web service.
 
 \paragraph{Bibliography:}
@@ -72,15 +72,8 @@ application, a mobile application, or a web service.
 
 The first two books --- \textcite{Zumel2019,Wickham2023} --- are available online for free.
 
-% \paragraph{Must read:}
-% \begin{itemize}
-%   \itemsep 0pt
-%   \item In-progress textbook at \href{https://comp.ita.br/~verri/dsp-book}{comp.ita.br/~verri/dsp-book}.
-%   \item \fullcite{Vapnik1999}.
-%   \item \fullcite{Benavoli2017}.
-% \end{itemize}
-
 Any required extra material will be made available in Google Classroom.
+
 \thispagestyle{empty}
 
 \newpage
@@ -143,110 +136,3 @@ presented per day, with 30 minutes for each presentation and 20 minutes for ques
 
 \thispagestyle{empty}
 
-\newpage
-\thispagestyle{empty}
-\section*{CMC-16 Data science practices}
-
-\emph{Course plan (\the\year{})}
-
-Prof. Filipe A. N. Verri
-
-\paragraph{Important:} Only ITA's undergraduate students are allowed to take this course.
-
-\paragraph{Number of students:} Approx. 20 (no more than 40 students)
-
-\paragraph{Course load:} 2--0--1--5
-
-\paragraph{Requirements:} CMC-13 or CMC-15
-
-\paragraph{Course program:}
-Brief history of Data Science. Stages in a Data Science project. Tidy Data. Data
-integration from multiple sources. Data engineering and shaping. Inductive learning and
-statistical learning theory. Experimental planning for Data Science. Model evaluation and
-Bayesian Analysis. Documentation and deployment. Privacy-preserving computational
-approaches.
-
-\paragraph{Goals:}
-Further studying the practical aspects of Data Science (in relation to CMC-13) and providing
-the mathematical foundations to ensure the correct usage of Data Science techniques.
-
-The specific goals are:
-\begin{itemize}
-  \item Understanding the steps and people involved in a Data Science project;
-  \item Developing an end-to-end case study, including data collection, data transformation,
-    inductive learning, validation, documentation, and deployment; and
-  \item Critically evaluate the results and implications of the case study.
-\end{itemize}
-
-\paragraph{Teaching methodology:}
-Expository classes in common classroom, using whiteboard, slide presentations, coding
-examples, books and scientific papers. Supplementary didactic materials will be available
-in Google Classroom. The development of the case study will happen during laboratory
-classes and home study hours.
-
-\paragraph{Grading:} One individual written test in the \nth{1} and another in the \nth{2} quarter.
-Software development and oral presentation about the case study (in groups) for the final exam.
-
-\paragraph{Case study:} At most 6 groups will be formed.  Each group will be responsible for
-a case study.  Students must choose a real-world problem and develop a data science
-project, including data collection, data handling, inductive learning, validation,
-documentation, and deployment.  The results must be presented in a 30 minutes presentation.
-The trained models must be incorporated in a data
-science product, such as a web application, a mobile application, or a web service.
-
-\thispagestyle{empty}
-\paragraph{Bibliography:}
-\begin{itemize}
-  \itemsep 0pt
-  \item \fullcite{Zumel2019}.
-  \item \fullcite{Wickham2023}.
-  \item \fullcite{Kelleher2018}.
-\end{itemize}
-
-The first two books --- \textcite{Zumel2019,Wickham2023} --- are available online for free.
-
-Any extra material will be made available in Google Classroom.
-
-\newpage
-\paragraph{Calendar:} The expected schedule is presented below.
-\thispagestyle{empty}
-
-\begin{center}
-  \begin{tabular}{ll}
-    \toprule
-    \multicolumn{2}{c}{\bfseries \nth{1} Quarter} \\
-    \midrule
-    Week & Topics \\
-    \midrule
-    1 & Brief history of Data Science \\
-    2 & Stages in a Data Science project \\
-    3 & Tidy Data and data integration from multiple sources \\
-    4 & Data engineering and shaping \\
-    5 & \multirow{2}{*}{Inductive learning and statistical learning theory} \\
-    6 &  \\
-    7 & Case study discussion and definitions \\
-    8 & \bfseries Written test \\
-    \bottomrule
-  \end{tabular}
-\end{center}
-
-\begin{center}
-  \begin{tabular}{ll}
-    \toprule
-    \multicolumn{2}{c}{\bfseries \nth{2} Quarter} \\
-    \midrule
-    Week & Topics \\
-    \midrule
-    1 & Model evaluation \\
-    2 & Experimental planning for Data Science \\
-    3 & Bayesian Analysis \\
-    4 & Documentation and deployment \\
-    5 & Privacy-preserving computational approaches \\
-    6 & \bfseries Written test \\
-    7 & \multirow{2}{*}{\bfseries Presentations and discussions} \\
-    8 & \\
-    \bottomrule
-  \end{tabular}
-\end{center}
-
-\thispagestyle{empty}
