--- a/preprocess.tex
+++ b/preprocess.tex
@@ -120,7 +120,7 @@ every row $r \in \{1, \dots, n\}$ is present in the table.
 
 A data preprocessing strategy $F$ is a function that takes a table $T = (K, H, c)$ and
 returns a adjusted table $T' = (K', H', c')$ and a fitted \emph{preprocessor} $f(z; \phi)
-= f_\phi(z)$ such that $$z \in \bigtimes_{h\, \in\, H} \domainof{h} \cup \{?\}$$ and $\phi$ are
+\equiv f_\phi(z)$ such that $$z \in \bigtimes_{h\, \in\, H} \domainof{h} \cup \{?\}$$ and $\phi$ are
 the fitted parameters of the operation.  Similarly, $z' = f_\phi(z)$, called the
 preprocessed tuple, satisfies $$z' \in \bigtimes_{h'\, \in\, H'} \domainof{h'} \cup
 \{?\}\text{.}$$ Note that we make no restrictions on the number of rows in the adjusted
