--- a/planning.tex
+++ b/planning.tex
@@ -80,7 +80,7 @@ plan.  These elements are:
     pipeline and learning the model.  The theoretical basis for these techniques is in
     \cref{chap:slt}, and the practical aspects of data handling are in \cref{chap:handling}.
   \item \textbf{Performance measure}: The metric that will be used to evaluate the
-    performance of the model.  Refer to \cref{chap:evaluation} for more information.
+    performance of the model.  Refer to \cref{sec:evaluation} for more information.
 \end{itemize}
 
 A general example of a description of an experimental plan is ``What is the probability of
@@ -458,9 +458,5 @@ hyperparameters in the experimental plan to make decisions about what goes to pr
 
 \textcolor{red}{We can unnest the search by interpreting the options as different
 algorithms two by two.}
-
-\section{Grouping}
-
-TODO Grouped cross validation.
 
 % vim: spell spelllang=en
