--- a/project.tex
+++ b/project.tex
@@ -799,7 +799,7 @@ learning, and validation.  \Cref{chap:preprocess} covers the subjects of data
 preprocessing ---
 adjustments to the data to be used by specific machine learning models ---, \cref{chap:slt}
 covers the subjects of learning machines --- methods that can estimate an unknown function
-based on input and output examples  ---, and \cref{chap:evaluation,chap:planning} cover
+based on input and output examples  ---, and \cref{chap:planning} cover
 the subjects of validation --- through evaluation we estimate the expected performance for unseen
 data, i.e. the probability distribution of the performance in production.
 
